--- a/style.css
+++ b/style.css
@@ -1,15 +1,7 @@
 * {
-    margin: 15px;
-}
-
-#meme-image-container {
-    border: 1px solid black;
-    width: 400px;
-    height: 400px;
-}
-
-#meme-text {
-    
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 #text-input {
@@ -17,6 +9,39 @@
     margin-bottom: 20px;
 }
 
+#meme-image {
+    object-fit: cover;
+    /*Essa parte que faz com que a imagem fique do espaço do container*/
+    width: 100%;
+}
+
+#meme-text {
+    font-family: 'Times New Roman', Times, serif;
+    color: purple;
+    text-shadow: 5px 5px 5px black;
+    font-size: 25px;
+    text-transform: uppercase;
+    word-wrap: break-word;
+    position: absolute;
+    bottom: 20px;
+    max-width: 400px;
+    text-align: center;
+}
+
+img[src=""] {
+    display: none;
+}
+
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+
 #meme-image-container {
+    border: 1px solid black;
+    width: 400px;
+    height: 400px;
     position: relative;
 }
