Requisito 1 e 3 que estavam dando erro, ajuste no height da id meme-image resolveu

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 }
 
 #meme-image {
-    object-fit: cover;
+    object-fit: fill;
     /*Essa parte que faz com que a imagem fique do espaço do container*/
     width: 100%;
 }
