--- a/style.css
+++ b/style.css
@@ -74,3 +74,23 @@ img {
     width: fit-content;
     margin-bottom: 5px;
 }
+
+#fire {
+    background-color: red;
+    color: white;
+}
+
+#water {
+    background-color: blue;
+    color: white;
+}
+
+#earth {
+    background-color: green;
+    color: white;
+}
+
+#normal {
+    background-color: black;
+    color: white;
+}
